PR/45932: Pierre Pronchery: Fix the return values of the suspend and resume functions.